# sga-unpacker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
crates/relic-chunky/: Cargo.toml
crates/relic-chunky/src/: chunky.rs  lib.rs  main.rs  rgd.rs
crates/relic-chunky/tests/: weapon_war_elephant_spear_3_sul.rgd
crates/sga/: README.md
crates/sga-macros/: Cargo.toml
crates/sga/src/entires/: file.rs  header.rs  toc.rs
crates/sga/src/nodes/: file.rs  mod.rs  toc.rs
relic-chunky/src/: chunky.rs  lib.rs  main.rs
sga/: Cargo.toml  mod.rs
sga-macros/: Cargo.toml
sga-macros/src/: lib.rs
sga-unpacker-cli/: Cargo.toml
sga-unpacker-cli/src/: main.rs
sga/src/: lib.rs  utils.rs
sga/src/entires/: mod.rs
sga/src/nodes/: file.rs  folder.rs  toc.rs
src/: lib.rs  main.rs  utils.rs
src/sga/: mod.rs
src/sga/entires/: file.rs  folder.rs
src/sga/nodes/: file.rs  folder.rs  toc.rs
test/: ArtJapanese.sga
