[package]
name = "sga"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for unpacking '.sga' files from Relic."

[dependencies]
sga-macros = { path = "../sga-macros" }

anyhow = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
