[package]
name = "sga"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for unpacking '.sga' files from Relic."

[dependencies]
sga-macros = { version = "0.1.0", path = "../sga-macros" }

anyhow = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
